--- a/EpisodeWeb/wwwroot/index.html
+++ b/EpisodeWeb/wwwroot/index.html
@@ -18,7 +18,7 @@
         <h1>OTR Manager</h1>
         <ul class="collapsible popout" data-collapsible="expandable">
             <li>
-                <div class="collapsible-header active"><img src="./move.png" height="35px" width="35px"/><h5>Dekodieren</h5></div>
+                <div class="collapsible-header active"><img src="./move.png" height="35px" width="35px"/><span class="accent-1">Dekodieren</span></div>
                 <div class="collapsible-body">
                     <div class="input-field">
                         <input placeholder="z:\downloads\otr" id="source_path" type="text" class="validate">
@@ -28,7 +28,7 @@
                     <div class="row">
                         <a id="decodeselected" class="waves-effect waves-light btn col s3 disabled" onclick="sendDecode()">Markierte Dateien dekodieren</a>
                         <a id="selectall" class="waves-effect waves-light btn col s3 disabled" onclick="markAll()">Alle Dateien markieren</a>
-                        <a id="decodeall" class="waves-effect waves-light btn col s3 disabled">Alle Dateien dekodieren</a>
+                        <a id="decodeall" class="waves-effect waves-light btn col s3 disabled" onclick="getStatus()">Status</a>
                     </div>
                     <table class="highlight responsive-table" id="encodedlist">
                         <tr>
