--- a/EpisodeWeb/wwwroot/index.html
+++ b/EpisodeWeb/wwwroot/index.html
@@ -18,7 +18,7 @@
         <h1>OTR Manager</h1>
         <ul class="collapsible popout" data-collapsible="expandable">
             <li>
-                <div class="collapsible-header active"><img src="./move.png" height="35px" width="35px"/><span class="accent-1">Dekodieren</span></div>
+                <div class="collapsible-header active valign-wrapper"><img src="./move.png" height="35px" width="35px"/><span class="accent-1">Dekodieren</span></div>
                 <div class="collapsible-body">
                     <div class="input-field">
                         <input placeholder="z:\downloads\otr" id="source_path" type="text" class="validate">
