removed unneccessary buttons, loads file on load

--- a/EpisodeWeb/wwwroot/index.html
+++ b/EpisodeWeb/wwwroot/index.html
@@ -14,21 +14,18 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./materialize/js/materialize.min.js"></script>
     <script type="text/javascript" src="./interaction.js"></script>
+    <script type="text/javascript">
+        window.onload = loadfiles;
+    </script>
     <div class="container">
         <h1>OTR Manager</h1>
         <ul class="collapsible popout" data-collapsible="expandable">
             <li>
-                <div class="collapsible-header active valign-wrapper"><img src="./move.png" height="35px" width="35px"/><span class="accent-1">Dekodieren</span></div>
+                <div class="collapsible-header active valign-wrapper"><img src="./move.png" height="35px" width="35px" /><span class="accent-1">Dekodieren</span></div>
                 <div class="collapsible-body">
-                    <div class="input-field">
-                        <input placeholder="z:\downloads\otr" id="source_path" type="text" class="validate">
-                        <label for="source_path">Dateipfad angeben</label>
-                    </div>
-                    <a class="waves-effect waves-light btn" onclick="loadfiles()">Dateien laden</a>
                     <div class="row">
                         <a id="decodeselected" class="waves-effect waves-light btn col s3 disabled" onclick="sendDecode()">Markierte Dateien dekodieren</a>
                         <a id="selectall" class="waves-effect waves-light btn col s3 disabled" onclick="markAll()">Alle Dateien markieren</a>
-                        <a id="decodeall" class="waves-effect waves-light btn col s3 disabled" onclick="getStatus()">Status</a>
                     </div>
                     <table class="highlight responsive-table" id="encodedlist">
                         <tr>
@@ -39,12 +36,8 @@
                 </div>
             </li>
             <li>
-                <div class="collapsible-header"><img src="./edit.png" height="35px" width="35px"/><h5>Benennen &amp; Verschieben</h5></div>
+                <div class="collapsible-header valign-wrapper"><img src="./edit.png" height="35px" width="35px" /><span class="accent-1">Benennen &amp; Verschieben</span></div>
                 <div class="collapsible-body">
-                    <div class="input-field">
-                        <input placeholder="z:\downloads\otr" id="source_path" type="text" class="validate">
-                        <label for="source_path">Dateipfad angeben</label>
-                    </div>
                     <a class="waves-effect waves-light btn">Dateien laden</a>
                     <table class="highlight responsive-table">
                         <tr>
@@ -52,42 +45,6 @@
                             <th>Show</th>
                             <th>Episode</th>
                             <th>Dateiname</th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" id="test21" />
-                                <label for="test21"></label>
-                            </td>
-                            <td>Doctor Who (2005)</td>
-                            <td>10x03 Extremis</td>
-                            <td>Doctor_Who_17.05.19-19_00-bbc.avi</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" id="test22" />
-                                <label for="test22"></label>
-                            </td>
-                            <td>Doctor Who (2005)</td>
-                            <td>10x03 Extremis</td>
-                            <td>Doctor_Who_17.05.19-19_00-bbc.avi</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" id="test23" />
-                                <label for="test23"></label>
-                            </td>
-                            <td>Doctor Who (2005)</td>
-                            <td>10x03 Extremis</td>
-                            <td>Doctor_Who_17.05.19-19_00-bbc.avi</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" id="test24" />
-                                <label for="test24"></label>
-                            </td>
-                            <td>Doctor Who (2005)</td>
-                            <td>10x03 Extremis</td>
-                            <td>Doctor_Who_17.05.19-19_00-bbc.avi</td>
                         </tr>
                     </table>
                     <div class="row">
@@ -100,5 +57,4 @@
         </ul>
     </div>
 </body>
-
 </html>
