--- a/EpisodeWeb/wwwroot/index.html
+++ b/EpisodeWeb/wwwroot/index.html
@@ -21,7 +21,7 @@
         <h1>OTR Manager</h1>
         <ul class="collapsible popout" data-collapsible="expandable">
             <li>
-                <div class="collapsible-header active valign-wrapper"><img src="./move.png" height="35px" width="35px" /><span class="accent-1">Dekodieren</span></div>
+                <div class="collapsible-header active valign-wrapper"><img src="./move.png" height="35" width="35" /><span class="accent-1">Dekodieren</span></div>
                 <div class="collapsible-body">
                     <div class="row">
                         <a id="decodeselected" class="waves-effect waves-light btn col s5 disabled" onclick="sendDecode()">Markierte Dateien dekodieren</a>
@@ -36,7 +36,7 @@
                 </div>
             </li>
             <li>
-                <div class="collapsible-header valign-wrapper"><img src="./edit.png" height="35px" width="35px" /><span class="accent-1">Benennen &amp; Verschieben</span></div>
+                <div class="collapsible-header valign-wrapper"><img src="./edit.png" height="35" width="35" /><span class="accent-1">Benennen &amp; Verschieben</span></div>
                 <div class="collapsible-body">
                     <a class="waves-effect waves-light btn">Dateien laden</a>
                     <div class="row">
